[workspace]
resolver = "2"
members = [
    "simnode",
    "runtime-api",
    "tests",

     # parachain
    "examples/parachain/node",
    "examples/parachain/runtime",

     # aura
     "examples/aura/node",
     "examples/aura/runtime",

      # babe
     "examples/babe/node",
     "examples/babe/runtime",
     "examples/babe/rpc",
]

[workspace.dependencies]
codec = { version = "3.1.3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
jsonrpsee = "0.24"
# crates which cannot be used from polkadot-sdk

polkadot-sdk = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

# crates which cannot be used from polkadot-sdk
sp-core = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime-interface = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-pallet-parachain-system = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
substrate-wasm-builder = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-service = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-tracing = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sp-api-proc-macro = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

# local crates
simnode-runtime-api = { path = "./runtime-api", version = "2412.0.0", default-features = false }
sc-simnode = { path = "./simnode", version = "2412.0.0" }
