[workspace]
resolver = "2"
members = [
    "simnode",
    "runtime-api",
    "tests",

    # parachain
    "examples/parachain/node",
    "examples/parachain/runtime",

    # aura
    "examples/aura/node",
    "examples/aura/runtime",

    # babe
    "examples/babe/node",
    "examples/babe/runtime",
    "examples/babe/rpc",
]

[workspace.dependencies]
codec = { version = "3.1.3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
jsonrpsee = "0.24"
polkadot-sdk = { version = "=2503.0.1", default-features = false }

# crates which cannot be used from polkadot-sdk
sp-core = { version = "36.1.0", default-features = false }
sp-runtime-interface = { version = "29.0.1", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
substrate-wasm-builder = "26.0.0"
sc-service = "0.50.0"
sc-network-sync = "0.48.0"
sc-tracing = "39.0.0"
sp-api-proc-macro = "22.0.0"

# local crates
simnode-runtime-api = { path = "./runtime-api", version = "2503.0.0", default-features = false }
sc-simnode = { path = "./simnode", version = "2503.0.0" }
