[workspace]
resolver = "2"
members = [
    "simnode",
    "runtime-api",
    "tests",

    # parachain
    "examples/parachain/node",
    "examples/parachain/runtime",

    # aura
    "examples/aura/node",
    "examples/aura/runtime",

    # babe
    "examples/babe/node",
    "examples/babe/runtime",
    "examples/babe/rpc",
]

[workspace.dependencies]
codec = { version = "3.1.3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
jsonrpsee = "0.24"
polkadot-sdk = { version = "2506.0.0", default-features = false }

# crates which cannot be used from polkadot-sdk
sp-core = { version = "37.0.0", default-features = false }
sp-runtime-interface = { version = "30.0.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.21.0", default-features = false }
substrate-wasm-builder = "27.0.0"
sc-service = "0.52.0"
sc-network-sync = "0.50.0"
sc-tracing = "40.0.0"

# local crates
simnode-runtime-api = { path = "./runtime-api", version = "2506.0.0", default-features = false }
sc-simnode = { path = "./simnode", version = "2506.0.0" }
