[package]
name = "substrate-simnode-example"
version = "0.1.0"
authors = ["Seun Lanlege <seun@polytope.capital>"]
edition = "2021"
publish = false

[dependencies]
test-runner = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

frame-system = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-asset-tx-payment = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

node-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
node-primitives = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
node-cli = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

grandpa = { package = "sc-finality-grandpa",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus-manual-seal = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-service = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-executor = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
