[package]
name = "simnode-runtime-api"
version = "1.8.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/polytope-labs/sc-simnode"
homepage = "https://simnode.polytope.technology/"
documentation = "https://docs.rs/sc-simnode"
description = "Runtime APIs required for simnode integration"
keywords = ["substrate", "polkadot-sdk", "integration-testing", "e2e-tests"]
readme = "../README.md"

[dependencies]
codec = { workspace = true }

# primitive deps
sp-api = { workspace = true }
sp-std = { workspace = true }


[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-std/std",
]
