[package]
name = "simnode-runtime-api"
version = "2506.0.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/polytope-labs/sc-simnode"
homepage = "https://simnode.polytope.technology/"
documentation = "https://docs.rs/sc-simnode"
description = "Runtime APIs required for simnode integration"
keywords = ["substrate", "polkadot-sdk", "integration-testing", "e2e-tests"]
readme = "../README.md"

[dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = ["sp-api", "sp-std"] }
# std won't build without it
tokio = { version = "1.46", features = ["net"], optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"tokio",
]
