[package]
edition = "2021"
name = "simnode-runtime-apis"
authors = ["David Salami <wizdave97@gmail.com>"]
version = "0.1.0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }

# primitive deps
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}


[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-std/std",
]
