[package]
name = "sc-simnode"
version = "0.1.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
edition = "2021"

[dependencies]
# client deps
sc-executor = { workspace = true }
sc-service = { workspace = true, features = ["test-helpers"] }
sc-telemetry = { workspace = true }
sc-informant = { workspace = true }
sc-network = { workspace = true }
sc-cli = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-rpc = { workspace = true }
sc-offchain = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-client-db = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-server = { workspace = true }

# consensus
sc-consensus-babe = { workspace = true, optional = true }
manual-seal = { workspace = true }
sc-consensus = { workspace = true }

# primitive deps
sp-consensus-aura = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, optional = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-transaction-pool = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-session = { workspace = true, default-features = true }
sp-offchain = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-externalities = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }
sp-wasm-interface = { workspace = true, default-features = true }
sp-runtime-interface = { workspace = true, default-features = true }

# pallets
frame-system = { workspace = true, default-features = true }

# parachain stuff
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
parachain-inherent = { workspace = true }
sproof-builder = { workspace = true }
parachain-info = { workspace = true }

# polkadot
polkadot-primitives = { workspace = true }

# others
codec = { workspace = true }
log = "0.4.8"
rand = "0.8.5"
futures = "0.3.16"
tokio = { version = "1.13", features = ["signal"] }
clap = { version = "4.0.9", features = ["derive"] }
# Calling RPC
jsonrpsee = { version = "0.16.2", features = ["server"] }
num-traits = "0.2.14"
async-trait = "0.1.57"
# local deps
simnode-runtime-api = { path = "../runtime-api" }


[features]
default = ["std"]
# This is here so that we can use the `runtime_interface` procedural macro
std = []

# consensus
parachain = []
aura = []
babe = ["sp-consensus-babe", "sc-consensus-babe"]
