[package]
name = "sc-simnode"
version = "2506.0.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/polytope-labs/sc-simnode"
homepage = "https://simnode.polytope.technology/"
documentation = "https://docs.rs/sc-simnode"
description = "Simnode is an e2e integration testing environment for substrate-based blockchains"
keywords = ["substrate", "polkadot-sdk", "integration-testing", "e2e-tests"]
readme = "../README.md"

[dependencies]
codec = { workspace = true }
num-traits = "0.2.14"
async-trait = "0.1.57"
log = "0.4.8"
rand = "0.8.5"
futures = "0.3.16"
tokio = { version = "1.46", features = ["signal"] }
clap = { version = "4.0.9", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server", "client-core", "macros"] }

sc-service = { workspace = true }
sp-runtime-interface = { workspace = true, default-features = true }
simnode-runtime-api = { workspace = true, default-features = true }

[dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "sc-executor",
    "sc-telemetry",
    "sc-informant",
    "sc-network",
    "sc-cli",
    "sc-basic-authorship",
    "sc-rpc",
    "sc-offchain",
    "sc-tracing",
    "sc-transaction-pool",
    "sc-client-db",
    "sc-transaction-pool-api",
    "sc-client-api",
    "sc-rpc-server",
    "sc-consensus-babe",
    "sc-consensus-manual-seal",
    "sc-consensus",
    "sc-consensus-slots",
    "cumulus-client-cli",
    "cumulus-client-collator",
    "cumulus-client-service",
    "cumulus-primitives-parachain-inherent",
    "cumulus-test-relay-sproof-builder",
    "staging-parachain-info",
    "sc-consensus-aura",
    "sp-consensus-aura",
    "sp-consensus-slots",
    "sp-consensus-babe",
    "sp-core",
    "sp-blockchain",
    "sp-block-builder",
    "sp-api",
    "sp-io",
    "sp-transaction-pool",
    "sp-consensus",
    "sp-runtime",
    "sp-session",
    "sp-offchain",
    "sp-inherents",
    "sp-keyring",
    "sp-externalities",
    "sp-state-machine",
    "sp-trie",
    "sp-timestamp",
    "sp-wasm-interface",
    "frame-system",
    "polkadot-primitives",
]

[features]
default = ["std"]
# This is here so that we can use the `runtime_interface` procedural macro
std = []

# consensus
parachain = []
aura = []
babe = []
