[package]
name = "simnode-integration-tests"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
anyhow = "1.0.70"
subxt = "0.31.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["macros"] }

codec = { workspace = true, default-features = true, features = ["derive"] }
sp-core = { workspace = true, default-features = true, features = ["full_crypto"] }
polkadot-sdk = { workspace = true, default-features = true, features = ["sp-keyring"] }
