[package]
name = "substrate-simnode-parachain-example"
version = "0.1.0"
authors = ["Seun Lanlege <seun@polytope.capital>"]
edition = "2021"
publish = false

[dependencies]
substrate-simnode = { path = "../../" }

# pallets
frame-system = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# runtime
parachain-runtime = { package = "parachain-template-runtime",  git = "https://github.com/substrate-developer-hub/substrate-parachain-template", tag = "polkadot-v0.9.16" }

# client
sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus-manual-seal = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-service = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-executor = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
grandpa = { package = "sc-finality-grandpa",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-cli = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
polkadot-cli = {  git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
# primitives
sp-consensus-aura = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

parachain-inherent = { package = "cumulus-primitives-parachain-inherent", git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
