[package]
name = "aura-node"
version = "0.1.0"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "aura-node"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
jsonrpsee = { workspace = true, features = ["server"] }
try-runtime-cli = { optional = true, workspace = true }
serde_json = "1.0"

aura-runtime = { path = "../runtime" }
sc-simnode = { workspace = true, features = ["aura"] }

[dependencies.polkadot-sdk]
workspace = true
default-features = false
features = [
    "sp-io",
    "sc-cli",
    "sp-core",
    "sc-executor",
    "sc-service",
    "sc-network",
    "sc-offchain",
    "sc-telemetry",
    "sc-keystore",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-consensus-aura",
    "sp-consensus-aura",
    "sp-consensus",
    "sc-consensus",
    "sc-consensus-grandpa",
    "sp-consensus-grandpa",
    "sc-client-api",
    "sp-runtime",
    "sp-timestamp",
    "sp-inherents",
    "sp-keyring",
    "frame-system",
    "sc-rpc",
    "sp-api",
    "sc-rpc-api",
    "sp-blockchain",
    "sp-block-builder",
    "sc-basic-authorship",
    "substrate-frame-rpc-system",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc",
    "frame-benchmarking",
    "frame-benchmarking-cli",
]

[build-dependencies]
polkadot-sdk = { workspace = true, default-features = true, features = ["substrate-build-script-utils"] }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"aura-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
    "aura-runtime/try-runtime",
    "polkadot-sdk/try-runtime",
    "try-runtime-cli/try-runtime"
]
