[package]
name = "aura-runtime"
version = "0.1.0"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Local Dependencies
simnode-runtime-api = { workspace = true }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "pallet-aura",
    "pallet-balances",
    "frame-support",
    "pallet-grandpa",
    "pallet-sudo",
    "frame-system",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "frame-executive",
    "sp-api",
    "sp-block-builder",
    "sp-consensus-aura",
    "sp-consensus-grandpa",
    "sp-core",
    "sp-inherents",
    "sp-offchain",
    "sp-runtime",
    "sp-session",
    "sp-std",
    "sp-transaction-pool",
    "sp-version",
    "sp-genesis-builder",
    "frame-system-rpc-runtime-api",
    "pallet-transaction-payment-rpc-runtime-api",
]

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true }

[features]
default = ["std"]
std = [
    "polkadot-sdk/std",
    "codec/std",
    "scale-info/std",
	"simnode-runtime-api/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
    "polkadot-sdk/frame-system-benchmarking",
    "polkadot-sdk/frame-try-runtime",
    "polkadot-sdk/frame-benchmarking",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
