[package]
name = "babe-node"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "babe-node"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "babe-node"
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
array-bytes = "4.1"
clap = { version = "4.0.9", features = ["derive"], optional = true }
codec = { workspace = true }
serde = { version = "1.0.136", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server"] }
futures = "0.3.21"
log = "0.4.17"
rand = "0.8"

# node-specific dependencies
babe-runtime = { path = "../runtime" }
node-rpc = { package = "babe-node-rpc", path = "../rpc" }
sc-simnode = { path = "../../../simnode", features = ["babe"] }

# CLI-specific dependencies
sc-service = { workspace = true }
try-runtime-cli = { optional = true,  workspace = true }
serde_json = "1.0"

[dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "sp-consensus-babe",
    "sp-consensus-grandpa",
    "sp-api",
    "sp-core",
    "sp-runtime",
    "sp-timestamp",
    "sp-inherents",
    "sp-keystore",
    "sp-consensus",
    "sp-transaction-pool",
    "sc-client-api",
    "sc-chain-spec",
    "sc-consensus",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-network-common",
    "sc-consensus-slots",
    "sc-consensus-babe",
    "sc-consensus-grandpa",
    "sc-rpc",
    "sc-cli",
    "sc-basic-authorship",
    "sc-telemetry",
    "sc-executor",
    "sc-sync-state-rpc",
    "sc-sysinfo",
    "sc-storage-monitor",
    "sc-offchain",
    "frame-system",
    "frame-benchmarking",
    "frame-system-rpc-runtime-api",
    "pallet-transaction-payment",
    "sp-keyring",
    "sp-transaction-storage-proof",
    "sp-io",
    "sc-network",
    "sc-network-sync",
    "frame-benchmarking-cli",
]

[dev-dependencies]
tempfile = "3.1.0"

[dev-dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "sc-keystore",
    "sc-consensus-epochs"
]

[build-dependencies]
polkadot-sdk = { workspace = true, default-features = true, features = ["substrate-build-script-utils"] }

[features]
default = ["cli"]
cli = [
    "polkadot-sdk/sc-cli",
    "polkadot-sdk/frame-benchmarking-cli",
    "sc-service/rocksdb",
    "clap",
    "try-runtime-cli",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "babe-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged.
# Name might be subject to change in the near future.
try-runtime = ["babe-runtime/try-runtime", "try-runtime-cli/try-runtime"]
