[package]
name = "babe-node-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node rpc methods."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { workspace = true, features = ["server"] }

[dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "pallet-transaction-payment-rpc",
    "sc-chain-spec",
    "sc-client-api",
    "sc-consensus-babe",
    "sc-consensus-grandpa",
    "sc-rpc",
    "sc-rpc-api",
    "sc-rpc-spec-v2",
    "sc-transaction-pool-api",
    "sp-api",
    "sp-block-builder",
    "sp-blockchain",
    "sp-consensus",
    "sp-consensus-babe",
    "sp-keystore",
    "sp-runtime",
    "sp-core",
    "substrate-frame-rpc-system",
    "substrate-state-trie-migration-rpc",
    "sc-consensus-babe-rpc",
    "sc-consensus-grandpa-rpc",
    "sc-sync-state-rpc",
]
