[package]
name = "babe-runtime"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node kitchensink runtime."
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len",] }
scale-info = { workspace = true, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.17", default-features = false }

simnode-runtime-api = { workspace = true }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "sp-consensus-babe",
    "sp-consensus-grandpa",
    "sp-block-builder",
    "sp-inherents",
    "sp-offchain",
    "sp-core",
    "sp-std",
    "sp-api",
    "sp-runtime",
    "sp-staking",
    "sp-session",
    "sp-transaction-pool",
    "sp-version",
    "sp-io",
    "sp-genesis-builder",
    "frame-executive",
    "frame-election-provider-support",
    "frame-benchmarking",
    "frame-support",
    "frame-system",
    "frame-system-rpc-runtime-api",
    "pallet-authorship",
    "pallet-babe",
    "pallet-offences",
    "pallet-balances",
    "pallet-grandpa",
    "pallet-staking",
    "pallet-sudo",
    "pallet-session",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "pallet-staking-reward-curve",
]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"polkadot-sdk/std",
	"codec/std",
	"scale-info/std",
	"log/std",
	"simnode-runtime-api/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "polkadot-sdk/pallet-offences-benchmarking",
    "polkadot-sdk/pallet-election-provider-support-benchmarking",
    "polkadot-sdk/pallet-nomination-pools-benchmarking",
    "polkadot-sdk/frame-system-benchmarking",
    "polkadot-sdk/frame-try-runtime",
    "polkadot-sdk/frame-benchmarking",
    "polkadot-sdk/pallet-session-benchmarking",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
